Add documents for authentication API
